[bugfix] increase contrast for “secondary” in light mode
Increase the contrast for icons, usernames, and some other places

--- a/app/javascript/flavours/glitch/styles/mastodon-light/colors.scss
+++ b/app/javascript/flavours/glitch/styles/mastodon-light/colors.scss
@@ -12,6 +12,9 @@
   --color-accent-fg: #282c37;
   --color-accent-lines: #c0cdd9;
 
+  /* Secondary */
+  --color-secondary-fg: #606984;
+
   /* Drawer */
   --color-drawer-bg: #fff;
   --color-drawer-bg--hover: #ccd7e0;
